# sahayak-ai

./: .gitignore  AGENTIC_AI_DEFENSE.md  API_QUOTA_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOY_READY.md  OPTIMIZATION_REPORT.md  PHASE_3_LANGGRAPH_GUIDE.md  README.md  SERPER_INTEGRATION_GUIDE.md  main.py  pyproject.toml  quick_check.py  render.yaml  requirements-dev.txt  requirements.txt  test_agent_directly.py  test_agent_local.py  test_agent_mock.py  test_api_keys.py  test_output.txt  test_quick.py
data/seed_docs/: scheme_1.md  scheme_2.md  scheme_3.md  scheme_4.md  scheme_5.md  scheme_6.md  scheme_7.md  scheme_8.md
saarnam-ai/supabase/migrations/: 001_create_sessions_tables.sql
sarvamai/: .env-example  .env.example  ARCHITECTURE.md  BUILD_CHECKLIST.md  README.md
sarvamai/scripts/: eval.py  ingest.py  ping_test.py  send_twilio_test_message.py  test_audio_input.py  test_audio_to_answer.py  test_e2e_pipeline.py  test_multilang.py  test_retrieval.py  test_retrieval_quality.py  test_sarvam.py
sarvamai/scripts/results/: audio_to_answer.json  e2e_pipeline.json  multilang_retrieval.json  retrieval_basic.json  sarvam_translation.json
sarvamai/src/app/: main.py
sarvamai/src/app/core/: config.py  supabase_client.py
sarvamai/src/app/db/: __init__.py  session.py  session_manager.py
sarvamai/src/app/models/: message_log.py  user.py
sarvamai/src/app/repositories/: message_log.py  user.py
sarvamai/src/app/schemas/: user.py
sarvamai/src/app/utils/: logging.py  (+1 more)
scripts/: health_check.py  migrate_to_bge_m3.py  phase_1b_test.py  phase_1d_test.py
(+29 files in other folders)
