[project]
name = "whatsapp-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "sarvamai>=0.1.25",
    "sqlalchemy>=2.0.46",
    "twilio>=9.10.1",
    "uvicorn>=0.40.0",
]
