[project]
name = "whatsapp-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "google-genai>=1.52.0",
    "httpx>=0.28.1",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.1",
    "langchain-openai>=0.0.1",
    "langgraph>=0.0.1",
    "pydantic-settings>=2.12.0",
    "psycopg-pool>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "sarvamai>=0.1.25",
    "sqlalchemy>=2.0.46",
    "supabase>=2.4.0",
    "tenacity>=8.2.0",
    "twilio>=9.10.1",
    "uvicorn>=0.40.0",
]
